@@ -4,5 +4,5 @@
   .rqda$BOM <- FALSE
   .rqda$encoding <- "unknown"
   cat("\nUse 'RQDA()' to start the programe.\n",fill=TRUE)
-  RQDA()
+  if (interactive()) RQDA()
 }
