@@ -1,12 +1,6 @@
-tree-like structure of files/ codes.
-
-get back to orginal files from coding(extend button)
+tree-like structure of files.
 
 summary functions for review of coding.
-
-better display coding chuck.
-
-Extended coding chuck, then release it as verion 0.1.5
 
 functions cleaning treecode/codecat table.
 
