@@ -52,10 +52,10 @@ the GUI, it can:
 <li>Support non-English documents, Simplified Chinese Character is well-tested under Windows
 <li>Character-level coding using codes
 <li>Memos of documents, codes, coding, project, files and more
-<li>Retrieval of coding
+<li>Retrieval of coding, and easily back to the original file (ease the problem of segmentation)
 <li>Single-file (*.rqda) format, which is basically SQLite database. Data are stored in UTF-8, so it should be portable
 <li>Facilitator helps to categorize codes,which is key to theory building. I deliberately avoid using tree-like categorization
-<li>There is a case category, which is crucial feature to bridge qualitative and quantative research
+<li>There is a case category, which is crucial feature to bridge qualitative and quantitative research
 <li>Search information about selected case from the Internet vis popup menu
 <li>Temporary delete files and codes
 <li> Rename the files,code, code category, case and others
